# vpnmanager

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.override.yml.example  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  main.py
backend/app/core/: crypto.py  csrf.py  exceptions.py  logging.py  passwords.py  rate_limit.py  sessions.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit_log.py  config.py  download_token.py  enums.py  organization.py  server.py  user.py
backend/app/providers/: amnezia_wg.py  base.py  detector.py  registry.py  ssh_utils.py  wg_easy.py  wg_utils.py  wireguard.py
backend/app/repositories/: audit_logs.py  configs.py  download_tokens.py  organizations.py  servers.py  users.py
backend/app/routers/: auth.py  configs.py  dashboard.py  deps.py  organizations.py  public.py  servers.py  ui.py  ui_actions.py  users.py
backend/app/schemas/: audit.py  auth.py  configs.py  organizations.py  servers.py  users.py
backend/app/services/: audit.py  auth.py  balancer.py  configs.py  organizations.py  servers.py  users.py
backend/app/static/: style.css
backend/app/templates/: base.html  dashboard.html  login.html
backend/app/templates/audit/: list.html
backend/app/templates/configs/: _list.html  my.html
backend/app/templates/organizations/: _table.html  list.html
backend/app/templates/servers/: _table.html  (+1 more)
backend/app/workers/: celery_app.py  lock.py  tasks.py
backend/tests/: conftest.py
backend/tests/integration/: test_postgres_schema.py
(+23 files in other folders)
