[project]
name = "amnezia-vpn-manager"
version = "0.1.0"
description = "Web-panel for managing multi-backend VPN configs (AmneziaWG / wg-easy / plain WireGuard)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "celery>=5.4",
    "redis>=5.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "asyncssh>=2.14",
    "cryptography>=42.0",
    "argon2-cffi>=23.1",
    "qrcode[pil]>=7.4",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "testcontainers[postgres]>=4.7",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC"]
# B008: Depends(...) в значениях по умолчанию — идиоматичный паттерн FastAPI, не баг.
# ASYNC109: timeout-параметры нужны для asyncssh.connect()/wg-easy HTTP-таймаутов.
ignore = ["E501", "B008", "ASYNC109"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
exclude = ["tests/", "alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
